# standalone-jswrapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: compile-platforms.yml
base/: CMakeLists.txt
base/include/base/: Optional.h
base/src/: Log.cpp
bindings/: CMakeLists.txt
bindings/conversions/: jsb_classtype.h  jsb_conversions.h
cmake/: predefine.cmake
cocos/: CMakeLists.txt
cocos/base/: CMakeLists.txt
cocos/base/include/base/: RefCounted.h
cocos/bindings/: CMakeLists.txt
cocos/bindings/conversions/: jsb_conversions_spec.cpp  jsb_conversions_spec.h
cocos/fileutils/: CMakeLists.txt
cocos/jswrapper/: CMakeLists.txt
cocos/jswrapper/include/jswrapper/: PrivateObject.h
cocos/jswrapper/include/jswrapper/v8/: Class.h
cocos/jswrapper/src/v8/: Class.cpp  Utils.cpp
cocos/jswrapper/v8-debugger/: http_parser.h  inspector_io.h  node_mutex.h  util.h
cocos/math/include/math/: Mat3.h  Mat4.inl  Quaternion.h  Quaternion.inl  Vec2.inl  Vec3.h
cocos/sebind/: CMakeLists.txt  class.cpp  class.h  class.inl  class_v8.cpp  class_v8.h
cocos/sebind/internal/: common.h
cocos/setpl/: CMakeLists.txt  class.cpp  class.h  signature.h
cocos/websocket-server/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h
demo/: Tank.cpp  Tank.h  Tank_setpl.cpp  Tank_setpl.h  demo.ini  test.cpp
demo/assets/: hello.js
demo/auto/: jsb_demo_auto.cpp  jsb_demo_auto.h  jsb_demo_auto.json
fileutils/: CMakeLists.txt
fileutils/include/: FileUtils-linux.h  FileUtils.h
fileutils/src/: FileUtils.cpp  Utils-win32.cpp
jswrapper/: CMakeLists.txt
jswrapper-adaptor/: CMakeLists.txt
jswrapper-adaptor/bindings/conversions/: jsb_conversions.h  jsb_conversions_spec.h  jsb_global.cpp  jsb_global.h
jswrapper-adaptor/fileutils/include/: FileUtils-apple.h  FileUtils-win32.h
jswrapper-adaptor/fileutils/src/: FileUtils-apple.mm  FileUtils-win32.cpp
jswrapper-adaptor/math/: CMakeLists.txt
jswrapper-adaptor/math/include/math/: MathBase.h  Vec2.h  Vec4.inl
jswrapper-adaptor/math/src/: Mat4.cpp  MathUtil.cpp  Vec3.cpp  Vertex.cpp
jswrapper/include/jswrapper/v8/: ScriptEngine.h
jswrapper/src/v8/: ScriptEngine.cpp
jswrapper/v8-debugger/: SHA1.h  env.h  inspector_agent.h  inspector_socket.h  inspector_socket_server.h  node.h  node_debug_options.h
math/: CMakeLists.txt
math/include/math/: Mat4.h  Math.h  Vec3.inl  Vec4.h
math/src/: Geometry.cpp  Mat3.cpp  Math.cpp  Quaternion.cpp  Vec2.cpp  Vec4.cpp
tools/bindings-generator/: generator.py
tools/bindings-generator/targets/spidermonkey/templates/: layout_head.c  layout_head.h
tools/tojs/: userconf.ini
